--- a/page-satu.html
+++ b/page-satu.html
@@ -29,7 +29,7 @@
         <span class="tooltip">Profile</span>
       </div>
     </div>
-    <a href="../css3/index.html"
+    <a href="index.html"
       ><button>
         <svg
           height="16"
